--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
     "angular": "^1.5.2",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
+    "css-loader": "^0.23.1",
     "gulp": "^3.9.0",
     "html-minify-loader": "^1.1.0",
+    "node-sass": "^3.4.2",
     "raw-loader": "^0.5.1",
+    "sass-loader": "^3.2.0",
+    "style-loader": "^0.13.1",
     "urbanjs-tools": "^0.6.0-beta"
   }
 }
