--- a/package.json
+++ b/package.json
@@ -5,19 +5,21 @@
   "scripts": {
     "pre-commit": "gulp pre-commit",
     "pre-release": "gulp pre-release",
-    "start": "node src/server.js",
+    "start": "ENV=development node src/server.js",
     "test": "gulp test"
   },
   "dependencies": {
     "babel-polyfill": "^6.3.14",
     "express": "^4.13.4",
-    "jade": "^1.11.0"
+    "jade": "^1.11.0",
+    "lodash": "^4.6.1"
   },
   "devDependencies": {
     "angular": "^1.5.2",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "css-loader": "^0.23.1",
+    "express-http-proxy": "^0.6.0",
     "gulp": "^3.9.0",
     "html-minify-loader": "^1.1.0",
     "node-sass": "^3.4.2",
